apps/endless-wiki/wiki-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki
  namespace: scratch
  labels:
    app.kubernetes.io/name: wiki
    app.kubernetes.io/instance: wiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: wiki
      app.kubernetes.io/instance: wiki
  template:
    metadata:
      labels:
        app.kubernetes.io/name: wiki
        app.kubernetes.io/instance: wiki
    spec:
      containers:
        - name: endless-wiki
          image: xanderstrike/endless-wiki:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 256Mi
