apps/endless-wiki/wiki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiki
  namespace: scratch
  labels:
    app.kubernetes.io/name: wiki
    app.kubernetes.io/instance: wiki
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: wiki
    app.kubernetes.io/instance: wiki
